<resources xmlns:x="urn:oasis:names:tc:xliff:document:1.2" xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">A:RC</string>
    <string name="app_name_full">ARK:Resource Calculator</string>
    <string name="load_activity_image_description">load screen image</string>
    <string name="load_activity_status_message_elapsed_format"><x:g id="seconds">%1$s</x:g>s</string>
    <string name="load_activity_status_message_format_with_elapsed_time"><x:g id="message">%1$s</x:g> (<x:g id="elapsed">%2$s</x:g>)</string>
    <string name="initialization_event_init">Greetings Survivor!</string>
    <string name="initialization_finish_event">Starting app! Craft efficiently, my friend.</string>
    <string name="initialization_error_event">Initialization failed.</string>
    <string name="initialization_event_check_for_update_error">Initialization failed while checking for an update.</string>
    <string name="initialization_event_check_for_update_start">Checking for new stuff and things..</string>
    <string name="initialization_event_check_for_update_has_update_single">Good news, survivor! We found new stuff and things; preparing for update..</string>
    <string name="initialization_event_check_for_update_first_install">Ooo… a newbie, eh? Preparing to update..</string>
    <string name="initialization_event_check_for_update_no_update">update not found. :(</string>
    <string name="initialization_event_update_database_error">Initialization failed while updating database.</string>
    <string name="initialization_event_update_database_started">Initializing database with new stuff and things..</string>
    <string name="initialization_event_update_database_progress_update">Updating <x:g>%1$s</x:g>.. (<x:g>%2$d</x:g>/<x:g>%3$d</x:g>)</string>
    <string name="initialization_event_update_database_finished">Database initialized!</string>
    <string name="initialization_purchase_event_init">\nChecking Play Store for purchased items..</string>
    <string name="initialization_purchase_event_success">.done!</string>
    <string name="initialization_purchase_event_failure">.failed!</string>
    <string name="initialization_purchase_event_error">.error!</string>
    <string name="initialization_pref_event_started">\nChecking preferences..</string>
    <string name="initialization_pref_event_finished">.done!</string>
    <string name="initialization_queue_event_started">\nFetching crafting queue data..</string>
    <string name="initialization_queue_event_fetching">.</string>
    <string name="initialization_queue_event_finished">.done!</string>
    <string name="initialization_queue_event_error">.failed!</string>
    <string name="initialization_app_init_event_started">\nPreparing initial app data..</string>
    <string name="initialization_app_init_event_finished">.done!</string>
    <string name="initialization_app_init_event_error">.failed!</string>
    <string name="title_activity_detail">Engram Details</string>
    <string name="title_activity_resources">Calculated Resources</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_title_search">Search</string>
    <string name="action_title_filter">Filter</string>
    <string name="action_title_save">Save</string>
    <string name="action_title_settings">Settings</string>
    <string name="action_title_help">View Tutorial</string>
    <string name="action_title_changelog">Changelog</string>
    <string name="action_title_about">About this app</string>
    <string name="action_title_feedback">Contact us</string>
    <string name="action_title_feedback_bug_report">Send bug report</string>
    <string name="action_title_feedback_correction">Send correction</string>
    <string name="content_main_clear_queue">Clear Queue</string>
    <string name="content_main_calculate_resources">Calculate</string>
    <string name="content_main_button_view_craftables">Back to Engrams</string>
    <string name="content_detail_save_button">Save and Close</string>
    <string name="content_detail_remove_button">Remove From Queue</string>
    <string name="content_detail_station_and_level_format">
        This Engram <x:g name="crafted_in" example="can be crafted without a station">%1$s</x:g>,
        <x:g name="required_level" example="and can be crafted at any level">%2$s</x:g>.
    </string>
    <string name="content_detail_crafted_in_format">can be crafted at the <x:g name="name">%1$s</x:g></string>
    <string name="content_detail_crafted_in_no_station">can be crafted without a station</string>
    <string name="content_detail_crafted_in_double_format"><x:g name="first">%1$s</x:g> and the <x:g name="second">%2$s</x:g></string>
    <string name="content_detail_crafted_in_multiple_format">, <x:g>%1$s</x:g></string>
    <string name="content_detail_crafted_in_multiple_last_format">, and the <x:g>%1$s</x:g></string>
    <string name="content_detail_required_level_any_level">and can be crafted at any level</string>
    <string name="content_detail_required_level_format">but requires level <x:g>%1$d</x:g> to craft</string>
    <string name="content_detail_number_picker_decrease">-1</string>
    <string name="content_detail_number_picker_decrease_by_10">-10</string>
    <string name="content_detail_number_picker_increase">+1</string>
    <string name="content_detail_number_picker_increase_by_10">+10</string>
    <string name="content_detail_mock_text_quantity">x0</string>
    <string name="content_detail_mock_text_name">Stone Wall</string>
    <string name="content_detail_mock_text_dlc">ARK:Survival Evolved: Scorched Earth</string>
    <string name="content_detail_mock_text_category">Structures/Stone</string>
    <string name="content_detail_mock_text_description">A brick-and-mortar wall that insulates the inside from the outside and separates rooms.</string>
    <string name="content_detail_mock_text_station_and_level">Stone Wall can be crafted without a station, and can be crafted at any level.</string>
    <string name="content_detail_image_description">thumbnail image of engram</string>
    <string name="interactive_fragment_waiting">Waiting for game data..</string>
    <string name="explorer_item_back_folder_title">..</string>
    <string name="explorer_item_back_folder_back_to_2_string_format">Back to
        <x:g name="parent_of_parent_title">%1$s</x:g>/<x:g name="parent_title">%2$s</x:g></string>
    <string name="explorer_item_back_folder_back_to_1_string_format">Back to
        <x:g name="parent_title">%1$s</x:g></string>
    <string name="explorer_item_back_folder_back_to_crafting_stations">Back to Crafting Stations</string>
    <plurals name="search_results_found">
        <item quantity="one">%d result found.</item>
        <item quantity="other">%d results found.</item>
    </plurals>
    <string name="search_no_matches">No matches found.</string>
    <string name="favorites_no_matches">No favorites found.</string>
    <string name="item_view_type_text_engram">Engram</string>
    <string name="item_view_type_text_folder">Folder</string>
    <string name="item_view_type_text_station">Station</string>
    <string name="item_view_type_text_resource">Resource</string>
    <string name="item_view_type_text_error">Error</string>
    <string name="header_view_type_text_engram">Engrams</string>
    <string name="header_view_type_text_folder">Folders</string>
    <string name="header_view_type_text_station">Stations</string>
    <string name="header_view_type_text_resource">Resources</string>
    <string name="header_view_type_text_error">Error</string>
    <string name="dialog_error_title">Oh noes! It\'s a Meganeura!</string>
    <string name="dialog_error_message">
        Oh, nevermind.. that\'s the wrong kind of bug. But good news! We\'ve caught it and are sending it off to be examined.
        While we work on a fix, a workaround could simply be to reset settings to default (below), restart the app or,
        if the problem persists, reinstall it.

        \n\nWe truly apologize for any inconvenience caused. Rest assured that a fix will be on the way. -Shane
    </string>
    <string name="dialog_error_button_positive">Reset To Defaults</string>
    <string name="dialog_error_button_negative">Close App</string>
    <string name="dialog_about_full_title">About ARK:Resource Calculator</string>
    <string name="dialog_edit_quantity_full_title">Edit Quantity</string>
    <string name="dialog_edit_quantity_message">"Enter new quantity"</string>
    <string name="dialog_edit_quantity_positive_button">Update Quantity</string>
    <string name="dialog_edit_quantity_negative_button">Cancel</string>
    <string name="snackbar_message_edit_quantity_fail">Engram\'s quantity was not changed.</string>
    <string name="snackbar_message_edit_quantity_fail_format"><x:g>%1$s</x:g>\'s quantity was not changed.</string>
    <string name="search_dialog_full_title">Search</string>
    <string name="search_dialog_positive_button">Search</string>
    <string name="search_dialog_negative_button">Cancel</string>
    <string name="help_dialog_full_title">How to Use This App</string>
    <string name="help_dialog_ok_button">Close</string>
    <string name="changelog_full_title">Changelog</string>
    <string name="pref_dlc_title">Change DLC</string>
    <string name="pref_dlc_description">Choose which DLC you are playing! (Currently set to <xliff:g>%1$s</xliff:g>)</string>
    <string name="pref_dlc_key">dlc</string>
    <string name="pref_dlc_value_vanilla">1</string>
    <string name="pref_filter_category_title">Categories/Folders</string>
    <string name="pref_filter_category_description">Filter Engrams by folders that match in-game
        folders! (Disabling this will show all Engrams from all folders.)
    </string>
    <string name="pref_filter_category_key">category_filter</string>
    <string name="pref_filter_category_value_default">true</string>
    <string name="pref_filter_station_title">Crafting Stations</string>
    <string name="pref_filter_station_description">Filter Engrams by Crafting Stations that match
        in-game stations! (Disabling this will show all Engrams from all stations.)
    </string>
    <string name="pref_filter_station_key">station_filter</string>
    <string name="pref_filter_station_value_default">true</string>
    <string name="pref_filter_level_title">Required Level</string>
    <string name="pref_filter_level_description">Filter Engrams by Required Level! Dependent upon
        which level is selected below. (Disabling this will show all Engrams from all levels.)
    </string>
    <string name="pref_filter_level_key">level_filter</string>
    <string name="pref_filter_level_value_default">false</string>
    <string name="pref_edit_text_level_title">Current level</string>
    <string name="pref_edit_text_level_description">Change this to your in-game level! (Currently set as level <xliff:g>%1$s</xliff:g>)</string>
    <string name="pref_edit_text_level_key">level_edit_text</string>
    <string name="pref_edit_text_level_value_default">@string/level_max_value</string>
    <string name="pref_filter_refined_title">Breakdown Refined Materials</string>
    <string name="pref_filter_refined_description">Displays raw materials in place of their refined
        Engram recipe. (Example: Show 2 Metal Ore instead of 1 Metal Ingot.)
    </string>
    <string name="pref_filter_refined_key">refined_filter</string>
    <string name="pref_filter_refined_value_default">false</string>
    <string name="action_title_remove_ads">Remove Ads</string>
    <string name="content_intro_image_description_background">tutorial background image</string>
    <string name="content_intro_image_description_bob">tutorial image of bob</string>
    <string name="content_intro_title_first">Tutorial</string>
    <string name="content_intro_description_first">
        Greetings Survivor! My name is BobOnTheCob, and I made an app! Let me show you how to use it.
    </string>
</resources>