<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame"
    android:padding="@dimen/layout_padding">

    <Button
        android:id="@+id/decreaseButtonBy10"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/content_detail_number_picker_decrease_by_10"/>

    <Button
        android:id="@+id/decreaseButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/decreaseButtonBy10"
        android:text="@string/content_detail_number_picker_decrease"/>

    <Button
        android:id="@+id/increaseButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/increaseButtonBy10"
        android:text="@string/content_detail_number_picker_increase"/>

    <Button
        android:id="@+id/increaseButtonBy10"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/content_detail_number_picker_increase_by_10"/>

    <TextView
        android:id="@+id/quantityEditText"
        style="@style/AppTheme.Text.Picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/decreaseButtonBy10"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"/>

</RelativeLayout>