<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:paddingBottom="@dimen/appIntroBottomBarHeight">

    <TextView
        android:id="@+id/title"
        style="@style/AppTheme.Text.Intro.Heading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appIntroBottomBarHeight"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="@string/content_intro_title_first"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_below="@+id/title"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_intro_image_description_background" />

    <LinearLayout
        android:id="@+id/selfie_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_below="@+id/title"
        android:gravity="bottom">

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/selfie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_intro_image_description_bob" />

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/description"
        style="@style/AppTheme.Text.Intro.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/content_intro_description_first"/>

</RelativeLayout>