<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/detail_padding">

    <TextView
        android:id="@+id/name"
        style="@style/AppTheme.Text.Detail.Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_detail_mock_text_name"
        android:textAllCaps="true"/>

    <!-- Top Section: Image of Engram, Title / Location /   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/detail_padding">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/detail_padding"
            android:adjustViewBounds="true"
            android:background="@drawable/frame_queue_item"
            android:src="@drawable/dialog_icons_error"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                style="@style/AppTheme.Text.Detail.Description"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/content_detail_mock_text_description"/>

            <TextView
                android:id="@+id/category"
                style="@style/AppTheme.Text.Detail.Category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_detail_mock_text_category"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Bottom Secction -->
    <TextView
        style="@style/AppTheme.Text.Detail.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/detail_padding"
        android:text="Crafting Requirements"/>

    <arc.resource.calculator.views.InventoryRecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>